# Report_Generation_Voice-text

./: .gitignore  .pre-commit-config.yaml  Dockerfile  INSTALL.md  README.md  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  start-dev.sh  start.sh
alembic/: env.py
alembic/versions/: a8c94d2f2887_create_user_table_table.py
app/api/: auth.py  deps.py  health.py  reports.py
app/config/: audio_config.py
app/core/: config.py  security.py
app/db/: base.py  session.py
app/models/: user.py
app/schemas/: token.py  user.py
app/services/: auth.py  meeting_analyzer.py  meeting_summarizer.py  report_generator.py
app/utils/: audio_utils.py  lru_cache.py
tests/: conftest.py  test_auth.py  test_health.py
